force-app/main/default/objects/PaymentReceiptLineItem__c/PaymentReceiptLineItem__c.object-meta.xml
<CustomObject>
    <label>Payment Receipt Line Item</label>
    <nameField>
        <displayFormat>PRL-{000000}</displayFormat>
        <label>Payment Receipt Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Receipt Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>