force-app/main/default/objects/PaymentReceiptLineItem__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>PaymentReceipt__r.Opportunity__r.AccountName__c</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>