force-app/main/default/objects/PaymentReceiptLineItem__c/fields/InvoiceLineItem__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>InvoiceLineItem__c</referenceTo>
    <relationshipLabel>Payment Receipt Line Item</relationshipLabel>
    <relationshipName>PaymentReceiptLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>