force-app/main/default/objects/PaymentReceiptLineItem__c/fields/LastUpdateInPJM__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateInPJM__c</fullName>
    <description>Last Update time in Pojjaman (PJM) system</description>
    <label>Last Update in PJM</label>
    <type>DateTime</type>
</CustomField>