force-app/main/default/objects/PaymentReceiptLineItem__c/fields/OpportunityPayment__c.field-meta.xml
<CustomField>
    <fullName>OpportunityPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Payment</label>
    <referenceTo>OpportunityPayment__c</referenceTo>
    <relationshipLabel>Payment Receipt Line Item</relationshipLabel>
    <relationshipName>Payment_Receipt_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>