force-app/main/default/objects/PaymentReceiptLineItem__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment Receipt Line Item</relationshipLabel>
    <relationshipName>PaymentReceiptLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>