force-app/main/default/objects/PaymentReceiptLineItem__c/fields/PaymentReceipt__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceipt__c</fullName>
    <description>การชำระเงินนี้อยู่ใต้ใบเสร็จใด</description>
    <label>Payment Receipt</label>
    <referenceTo>PaymentReceipt__c</referenceTo>
    <relationshipName>Payment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>