force-app/main/default/objects/PaymentReceiptLineItem__c/fields/PJMDocumentNo__c.field-meta.xml
<CustomField>
    <fullName>PJMDocumentNo__c</fullName>
    <description>Document Number in PJM</description>
    <externalId>true</externalId>
    <label>PJM Document No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>