force-app/main/default/objects/PaymentReceiptLineItem__c/fields/PreviousRemaining__c.field-meta.xml
<CustomField>
    <fullName>PreviousRemaining__c</fullName>
    <label>Previous Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>