force-app/main/default/objects/PaymentReceiptLineItem__c/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <formula>PaymentMethod__r.PaymentDate__c</formula>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>