force-app/main/default/objects/PaymentReceiptLineItem__c/fields/RemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingAmount__c</fullName>
    <label>RemainingAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>