force-app/main/default/objects/PaymentReceiptLineItem__c/fields/ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseCode__c</fullName>
    <label>Response Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>