force-app/main/default/objects/PaymentReceiptLineItem__c/fields/TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionDateTime__c</fullName>
    <description>เวลาและวันที่ที่ชำระเงิน</description>
    <label>Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>