force-app/main/default/objects/PaymentReceiptLineItem__c/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <formula>PaymentReceipt__r.UnitName__c</formula>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>